--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "react-spotify-login": "^0.9.1",
+    "spotify-player": "^1.0.0-alpha.1",
     "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
